--- a/module/Application/view/layout/settingpage.phtml
+++ b/module/Application/view/layout/settingpage.phtml
@@ -19,15 +19,17 @@
 
     <!-- Scripts -->
     <?php echo $this->headScript()
+        ->prependFile($this->basePath() . '/js/script.cropImage_cover.private.js')
         ->prependFile($this->basePath() . '/js/script.cropImage.private.js')
         ->prependFile($this->basePath() . '/js/jquery.imgareaselect.pack.js')
         ->prependFile($this->basePath() . '/js/prototype.js')
         ->prependFile($this->basePath() . '/js/jquery.validate.min.js')
         ->prependFile($this->basePath() . '/js/jquery.accordion.js')
         ->prependFile($this->basePath() . '/js/jquery.easing.1.3.js')
-        ->prependFile($this->basePath() . '/js/bootstrap.min.js')
+//        ->prependFile($this->basePath() . '/js/bootstrap.min.js')
         ->prependFile($this->basePath() . '/js/jquery.validate.min.js')
         ->prependFile($this->basePath() . '/js/jquery.1.7.1.min.js')
+//        ->prependFile($this->basePath() . '/js/jquery-1.6.1.min.js')
         ->prependFile($this->basePath() . '/js/respond.min.js', 'text/javascript', array('conditional' => 'lt IE 9',))
         ->prependFile($this->basePath() . '/js/html5shiv.js',   'text/javascript', array('conditional' => 'lt IE 9',))
     ; ?>
