--- a/module/Userpage/view/userpage/userpage/index.phtml
+++ b/module/Userpage/view/userpage/userpage/index.phtml
@@ -146,7 +146,7 @@
 
     <div class="divUserPanel">
         <div class="userAvatar">
-            <img src="<?php echo $this->basePath(); ?>/img/ava-temp.png" id="userAvatar" />
+            <img src="<?php echo $this->basePath().'/uploads/'.$pathUserAvatar; ?>" id="userAvatar" />
         </div>
         <div class="userInfo">
             <div class="info name"><?php echo $datauser->getLastname() .' '. $datauser->getFirstname(); ?></div>
@@ -207,7 +207,7 @@
 
 <div class="divRight">
     <div class="divCover">
-        <img id="imgCover" src="<?php echo $this->basePath(); ?>/img/cover-faker.jpg" />
+        <img id="imgCover" src="<?php echo $this->basePath().'/uploads/'.$pathCover; ?>" />
     </div>
     <div class="statusBlock">
         <div class="statusType">
@@ -263,7 +263,7 @@
     <div class="divAction">
         <div class="divStatus">
             <div class="statusAvatar">
-                <img src="<?php echo $this->basePath(); ?>/img/ava-temp.png" />
+                <img src="<?php echo $this->basePath().'/uploads/'.$pathUserAvatar; ?>" />
             </div>
             <div class="statusRightPanel">
                 <div class="statusPosition"><span>Nguyễn Xuân Bình</span> &curren; 5 minutes ago at Ho Chi Minh</div>
@@ -301,7 +301,7 @@
                     </div>
                     <div class="commentCompose">
                         <div class="commentUserAvatar">
-                            <img src="<?php echo $this->basePath(); ?>/img/ava-temp.png" />
+                            <img src="<?php echo $this->basePath().'/uploads/'. $pathUserAvatar;?>"/>
                         </div>
                         <div class="commentRight">
                             <textarea></textarea>
