--- a/public/css/style.css
+++ b/public/css/style.css
@@ -819,12 +819,22 @@ footer {
     height: auto;
     min-height:87px;
     width: 100%;
-    padding-left: 2%;
+    padding-left: 5px;
+    padding-right: 5px;
     padding-top: 5px;
     display: inline-block;
     float:left;
     background-color: #f9f9f9;
     word-wrap:break-word;
+}
+
+.divRight .divAction .statusRightPanel .statusContent img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    max-width: 480px;
 }
 
 .divRight .divAction .statusRightPanel .statusFooter {
@@ -988,6 +998,12 @@ footer {
     float:left;
     padding-left:10px;
     background-color:transparent;
+}
+
+.divRight .divAction .statusRightPanel .divComment .commentCompose .commentRight p{
+    font-size: 13px;
+    font-style: italic;
+    /*display: none;*/
 }
 
 .divRight .divAction .statusRightPanel .divComment .commentCompose .commentRight textarea {
